# Meow

./: .gitignore  CNAME  MANIFEST.in  Makefile  README.md  RELEASE_v0.1.0.md  index.html  meow.tmLanguage.json  meow_interpreter.py  playground.css  playground.html  playground.js  pyproject.toml  requirements.txt  script.js  setup.py  styles.css  test_meow.py
.github/workflows/: deploy.yml  publish.yml
demo/: README.md  app.py  index.html  playground-old.html  playground-old.js  script.js  start_demo.bat  start_demo.py  start_demo.sh  web_interpreter.js
demo/pages/: about.html  docs.html  examples.html  home.html  playground.html
demo/scripts/: examples.js  nav.js  playground.js
demo/static/: index.html
demo/static/css/: style.css
demo/static/js/: app.js  meow-interpreter.js  playground.js
demo/styles/: about.css  docs.css  examples.css  home.css  main.css  playground.css
demo/templates/: base.html  index.html  playground.html
examples/: calculator.meow  calculator_fixed.meow  countdown.meow  fibonacci.meow  groom.meow  heartbeat.meow  hello_world.meow  powers.meow  puffup_shrinktail.meow  stretch.meow
meowlang/: __init__.py  interpreter.py
meowlang.egg-info/: PKG-INFO
vscode-meowlang/: language-configuration.json  package.json
