[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meowlang"
version = "0.1.0"
description = "A feline-friendly esoteric programming language"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jaytirth Joshi", email = "jay@joshi1.com"}
]
maintainers = [
    {name = "Jaytirth Joshi", email = "jay@joshi1.com"}
]
keywords = [
    "esolang", "programming", "language", "cat", "meow", 
    "esoteric", "interpreter", "brainfuck", "educational"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
web = [
    "flask>=2.0",
    "flask-cors>=3.0",
]

[project.urls]
Homepage = "https://github.com/jaytirthjoshi/meow"
Documentation = "https://github.com/jaytirthjoshi/meow#readme"
Repository = "https://github.com/jaytirthjoshi/meow"
"Bug Tracker" = "https://github.com/jaytirthjoshi/meow/issues"
"Web Demo" = "https://meowlang.jaytirthjoshi.com"

[project.scripts]
meow = "meowlang.interpreter:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["meowlang*"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests", "test_meow.py"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "flask.*",
    "flask_cors.*",
]
ignore_missing_imports = true 